# aios

./: .gitignore  Cargo.toml  DESIGN.md  DOCS.md  FINDINGS.md  README.md  babilong_tuned.txt  endurance.py  endurance_log.jsonl  grading.py  judge.py  judge_frontier.py  leak_gauntlet.py  mem0_bench.py  stress_daemon.py  stress_discriminate.py  stress_disjoint.py
app/: index.html
app/src/: styles.css
bench/: contamination_gen.py  judge_frontier.py
daemon/: Cargo.toml
daemon/src/: api.rs  bedrock.rs  calc.rs  journal.rs  main.rs  mcp.rs  providers.rs  state.rs  websearch.rs  worker.rs
examples/: annotated_prompt.rs  retrieval_probe.rs
fullbench_benefit/: lme_conflation_off_rep2.judged.jsonl  lme_conflation_on_rep1.jsonl  lme_knowledge_update_off_rep1.jsonl  lme_knowledge_update_off_rep1.judged.jsonl  lme_knowledge_update_on_rep2.jsonl  lme_knowledge_update_on_rep2.judged.jsonl  lme_temporal_reasoning_off_rep1.jsonl  lme_temporal_reasoning_off_rep3.judged.jsonl  lme_temporal_reasoning_on_rep1.judged.jsonl  lme_temporal_reasoning_on_rep3.jsonl
fullbench_struct/: lme_knowledge_update_struct.jsonl  lme_multi_session_struct.jsonl  lme_single_session_assistant_struct.jsonl  lme_single_session_preference_struct.jsonl  lme_single_session_user_struct.jsonl  lme_temporal_reasoning_struct.jsonl
fullbench_struct_ungate2/: lme_single_session_user_ungate2.jsonl  lme_temporal_reasoning_ungate2.jsonl
harnesses/: judge.py  leak_gauntlet.py  stress_discriminate.py  stress_disjoint.py
kvpoc/: Cargo.toml
kvpoc/src/: cacheblend.rs  codesession.rs  main.rs
results/: babilong_multihop.txt  benefit_prompts_annotate_off.txt  benefit_prompts_annotate_on.txt  guard_rendered_annotate_on.txt
src/: bedrock.rs  calc.rs  codegraph.rs  driver.rs  eviction.rs  hierarchical.rs  http.rs  kernel.rs  lib.rs  llamaserver.rs  main.rs  matcher.rs  metrics.rs  ollama.rs  probe_util.rs  server.rs  store.rs  ui.html
training/: gen_training_data.py
