[package]
name = "continuum"
version = "0.1.0"
edition = "2021"
description = "Continuum: a local-first memory layer for LLMs. A Rust kernel that pages a versioned, on-disk memory store into the context window per query, and a daemon and web app built on it."

[workspace]
members = [".", "kvpoc", "daemon"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "continuum"
path = "src/main.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[[bin]]
name = "stress"
path = "src/bin/stress.rs"

[[bin]]
name = "transfer"
path = "src/bin/transfer.rs"

[[bin]]
name = "babilong"
path = "src/bin/babilong.rs"

[[bin]]
name = "longmemeval"
path = "src/bin/longmemeval.rs"

[profile.release]
opt-level = 3
