[package]
name = "kvpoc"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-cpp-2 = "0.1"
serde_json = "1"
continuum = { path = ".." }

[[bin]]
name = "kvpoc"
path = "src/main.rs"

[[bin]]
name = "cacheblend"
path = "src/cacheblend.rs"

[[bin]]
name = "codesession"
path = "src/codesession.rs"
